@@ -3,6 +3,7 @@ Changelog for GoodNews
 GoodNews 1.3.3-pl (2014-11-12)
 --------------------------------------------------
 - [#28] Frontend: Subscription snippet - crashes during validation if email field is empty
+- improved username creation in Subscriber Importer (we now use the userid part of the email address)
 
 
 GoodNews 1.3.2-pl (2014-11-01)
